doc:sun95 remove typo in contour sst

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -18775,7 +18775,7 @@ KAPPA: \htmlref{BLOCK}{BLOCK},
      \begin{tabular}{c l}
       contour ndf [comp] mode ncont [key] [device] &
       {  $\begin{cases}
-          \mathtt\texttt{low=?\ high=?} \\
+          \mathtt{low=?\ high=?} \\
           \mathtt{percentiles=?} \\
           \mathtt{sigmas=?}
         \end{cases} $}\\
