kaplibs: typo fix in documentation

--- a/libraries/kaplibs/sun238.tex
+++ b/libraries/kaplibs/sun238.tex
@@ -40764,7 +40764,7 @@ ZERO2D  & \multicolumn{2}{l}{KPG1\_FILLx setting the fill value to 0.0. } \\
    }
    \sstarguments{
       \sstsubsection{
-         paramc = const char $*$ (Given)
+         param = const char $*$ (Given)
       }{
          The name of the environment parameter to use.
       }
