kaplibs: fix two more typos

--- a/libraries/kaplibs/sun238.tex
+++ b/libraries/kaplibs/sun238.tex
@@ -40737,7 +40737,7 @@ ZERO2D  & \multicolumn{2}{l}{KPG1\_FILLx setting the fill value to 0.0. } \\
       an associated value of 1) has the name of the alternative removed
       (but only if no value has been supplied for the parameter without
       an alternative prefix - thus {\tt "}filt=10{\tt "} takes priority of {\tt "}450.filt=20{\tt "}).
-      Any parameter that start with the name of any of the other
+      Any parameter that starts with the name of any of the other
       alternatives is simply removed from the configuration. Thus, using
       the above example, if {\tt "}nested{\tt "} contains two entries - one with key
       {\tt "}850{\tt "} and value {\tt "}1{\tt "}, and the other with key {\tt "}450{\tt "} and value {\tt "}0{\tt "} -
@@ -40752,7 +40752,7 @@ ZERO2D  & \multicolumn{2}{l}{KPG1\_FILLx setting the fill value to 0.0. } \\
       Finally, the values in the user-supplied configuration are used to
       replace those in the defaults file.
 
-      The beneifts of using this function are that 1) the user gets to
+      The benefits of using this function are that 1) the user gets to
       know if they mis-spell a config parameter name, and 2) the default
       parameter values can be defined in a single place, rather than
       hard-wiring them into application code at each place where the
