KAPPA: Start a new version post 2014A.
Move the recent CONFIGECHO change (df8ab4fae9cb0) to the new version.

--- a/applications/kappa/sun95.tex
+++ b/applications/kappa/sun95.tex
@@ -15,9 +15,9 @@
 \newcommand{\stardocsource}    {sun95.41}
 \newcommand{\stardocnumber}    {95.41}
 \newcommand{\stardocauthors}   {Malcolm J. Currie \& David S. Berry}
-\newcommand{\stardocdate}      {2014 May 5}
+\newcommand{\stardocdate}      {2014 September 24}
 \newcommand{\stardoctitle}     {KAPPA --- Kernel Application Package}
-\newcommand{\stardocversion}   {2.1}
+\newcommand{\stardocversion}   {2.2}
 \newcommand{\stardocmanual}    {User's Guide}
 % ? End of document identification
 % -----------------------------------------------------------------------------
@@ -59206,7 +59206,7 @@ The following applications have been modified:
       \end{itemize}
 \end{description}
 
-\section{\xlabel{se_changes}Release Notes---V2.1\label{se:changes}}
+\section{Release Notes---V2.1}
 
 \subsection{New Commands}
 The following new applications have been added:
@@ -59253,12 +59253,6 @@ The following applications have been modified:
         ascension and declination, are now normalised into the usual
         ranges.  This aplies both to the reported positions and the
         output parameters.
-      \end{itemize}
-   \item [\htmlref{CONFIGECHO}{CONFIGECHO}]\mbox{}
-      \begin{itemize}
-        \item A new parameter called LOGFILE has been added that allows
-        the list of displayed configuration parameters to be written to a
-        text file.
       \end{itemize}
    \item [\htmlref{COPYBAD}{COPYBAD}]\mbox{}
       \begin{itemize}
@@ -59330,6 +59324,23 @@ The following applications have been modified:
         well as rebinning mode.
       \end{itemize}
 \end{description}
+
+
+\section{\xlabel{se_changes}Release Notes---V2.2\label{se:changes}}
+
+\subsection{Modified Commands}
+The following applications have been modified:
+
+\begin{description}
+   \item [\htmlref{CONFIGECHO}{CONFIGECHO}]\mbox{}
+      \begin{itemize}
+        \item A new parameter called LOGFILE has been added that allows
+        the list of displayed configuration parameters to be written to a
+        text file.
+      \end{itemize}
+\end{description}
+
+
 
 \begin{latexonly}
 \newpage
