ast: Allow FrameSet base and current frames to be specified by Domain name
The supplied Domain name, if found in the FrameSet, is converted to an
integer Frame index, which is then stored as the attribute value. An
error is reported if the FrameSet does not contain a Frame with the
specified Domain.

--- a/libraries/ast/sun_master.tex
+++ b/libraries/ast/sun_master.tex
@@ -22967,6 +22967,8 @@ current version):
 
 \begin{enumerate}
 
+\item The Base and Current attributes of a FrameSet may now be set using the
+  Domain name or the index of the required Frame.
 \item The order of WCS axes within new FITS-WCS headers created by astWrite
   can now be controlled using a new attribute called FitsAxisOrder.
 \item Supported added for FITS XPH (polar HEALPIX) projection.
